# appid_finder

./: Cargo.toml  LICENSE  README.md
src/: android_appid.rs  http_client.rs  ios_appid.rs  main.rs
web/: index.html  styles.css
