[package]
name = "appid_finder"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web server framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for API calls
reqwest = { version = "0.13", features = ["json"] }

# HTML parsing for Android app scraping
scraper = "0.25"

# URL handling
url = "2.5"
urlencoding = "2.1"

# Local network IP discovery
local-ip-address = "0.6"
